--- a/css/recovery/recovery-formulario.css
+++ b/css/recovery/recovery-formulario.css
@@ -1,6 +1,7 @@
-.login__formulario {
+.recovery__formulario {
     align-items: center;
     display: flex;
     flex-direction: column;
     gap: .75rem;
+    justify-content: center;
 }
